<?php die(); ?>
Akeeba Panopticon 1.0.1
================================================================================
! Security update: TinyMCE 6.7.1
# [MEDIUM] Log view: timezone calculation was wrong
# [LOW] Log view: undefined property warning, leads to the site list being empty
# [LOW] Possible PHP issue with ForkedLogger

Akeeba Panopticon 1.0.0
================================================================================
+ Initial release